2010-03-20  Richard Guenther  <rguenther@suse.de>

	PR rtl-optimization/43438
	* gcc.c-torture/execute/pr43438.c: New testcase.

2010-03-20  Dodji Seketeli  <dodji@redhat.com>

	PR c++/43375
	* g++.dg/abi/mangle42.C: New test.

2010-03-19  Andrew Pinski  <andrew_pinski@caviumnetworks.com>

	PR C/43211
	* gcc.dg/pr43211.c: New test.
	* gcc.dg/pr18809-1.c: Don't expect an error when calling foo.

2010-03-19  Bernd Schmidt  <bernd.schmidt@codesourcery.com>

	PR rtl-optimization/42258
	* gcc.target/arm/thumb1-mul-moves.c: New test.

	PR target/40697
	* gcc.target/arm/thumb-andsi.c: New test.

	* gcc.target/arm/thumb-andsi.c: Correct dg-options and add
	dg-require-effective-target.

2010-03-19  Michael Matz  <matz@suse.de>

	PR c++/43116
	* g++.dg/other/pr43116.C: New testcase.

2010-03-19  Michael Matz  <matz@suse.de>

	PR target/43305
	* gcc.dg/pr43305.c: New testcase.

2010-03-19  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43415
	* gcc.c-torture/compile/pr43415.c: New testcase.

2010-03-19  Eric Botcazou  <ebotcazou@adacore.com>

	PR ada/43106
	* gnat.dg/case_optimization2.adb: New test.
	* gnat.dg/case_optimization_pkg2.ad[sb]: New helper.

2010-03-18  Francois-Xavier Coudert <fxcoudert@gcc.gnu.org>
	    Jack Howarth <howarth@bromo.med.uc.edu>

	PR target/36399
	* gcc.target/i386/push-1.c: Don't xfail
	  scan-assembler-not "movups" on darwin.

2010-03-18  Jakub Jelinek  <jakub@redhat.com>

	PR debug/43058
	* gcc.dg/pr43058.c: New test.

2010-03-18  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/42450
	* g++.dg/torture/pr42450.C: New test.

2010-03-18  Michael Matz  <matz@suse.de>

	PR middle-end/43419
	* gcc.dg/pr43419.c: New testcase.

2010-03-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/43360
	* gcc.dg/torture/pr43360.c: New.

2010-03-18  Michael Matz  <matz@suse.de>

	PR tree-optimization/43402
	* gcc.dg/pr43402.c: New testcase.

2010-03-17  Peter Bergner  <bergner@vnet.ibm.com>

	PR target/42427
	* gcc.dg/pr42427.c: New test.
