@@ -1,3 +1,8 @@
+2010-03-20  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR fortran/43409
+	* gfortran.dg/inquire_size.f90: New test.
+
 2010-03-20  Richard Guenther  <rguenther@suse.de>
 
 	PR rtl-optimization/43438
